modify linkedin and github links

--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
     <section id="contact">
       <h3>Contact</h3>
       <p>Let’s connect — I’m open to collaborations and job opportunities in Sweden or remote positions.</p>
-      <a href="mailto:majidkarimi.devops@gmail.com" class="btn">📩 Email Me</a>
+      <a href="mailto:majidkarimi.devops@gmail.com" class="btn">Email Me</a>
       <div class="social">
-        <a href="https://www.linkedin.com/in/majidkarimi-devops" target="_blank">LinkedIn</a> |
-        <a href="https://github.com/majidkarimi-devops" target="_blank">GitHub</a>
+        <a href="https://www.linkedin.com/in/majidkarimi-it" target="_blank">LinkedIn</a> |
+        <a href="https://github.com/Majid-dev" target="_blank">GitHub</a>
       </div>
     </section>
   </main>
